<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E景通</string>
    <string name="testJson">{\"datas\":[{\"baseInfo\":{\"addCode\":\"74228522\",\"addCodeStatus\":\"UNUSED\",\"invalidTime\":\"2013-05-13 00:00:00\",\"memo\":\"\",\"orderId\":1316030,\"orderViewStatus\":\"PAYED\",\"payTo\":\"TOLVMAMA\",\"validTime\":\"2013-05-08 00:00:00\"},\"metas\":[{\"adultQuantity\":1,\"childQuantity\":0,\"orderId\":1316030,\"orderItemMetaId\":1367504,\"productName\":\"EBK供应商测试(儿童票)\",\"quantity\":0,\"realQuantity\":0,\"sellPrice\":514,\"totalPrice\":0}],\"persons\":[{\"cerType\":\"ID_CARD\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"身份证\"},{\"cerType\":\"ID_CARD\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"身份证\"},{\"cerType\":\"\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"\"}]},{\"baseInfo\":{\"addCode\":\"26752789\",\"addCodeStatus\":\"UNUSED\",\"invalidTime\":\"2013-05-12 00:00:00\",\"memo\":\"\",\"orderId\":1316024,\"orderViewStatus\":\"PAYED\",\"payTo\":\"TOLVMAMA\",\"validTime\":\"2013-05-07 00:00:00\"},\"metas\":[{\"adultQuantity\":1,\"childQuantity\":0,\"orderId\":1316024,\"orderItemMetaId\":1367496,\"productName\":\"EBK供应商测试(儿童票)\",\"quantity\":0,\"realQuantity\":0,\"sellPrice\":514,\"totalPrice\":0}],\"persons\":[{\"cerType\":\"ID_CARD\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"身份证\"},{\"cerType\":\"ID_CARD\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"身份证\"},{\"cerType\":\"\",\"certNo\":\"\",\"fullAddress\":\"\",\"mobile\":\"\",\"name\":\"\",\"orderId\":0,\"personId\":0,\"personType\":\"\",\"zhCertType\":\"\"}]}],\"command\":\"SYNC_DATAS\",\"callBackMD5ID\":\"9079a57d70d3767c2b0f8bce8f150827\"}</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="search_order_tip_input_order_no">请输入附加码</string>
    <string name="search_order_order_no">订单号 :</string>
    <string name="order_pass">通  关</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancle">取消</string>
    <string name="button_change_quantity">修改数量</string>
    <string name="setting_addr_logic_lable">业务拉数据地址：</string>
    <string name="setting_addr_push_back_lable">推送服务回调地址：</string>
    <string name="setting_addr_push_server_lable">推送服务器地址：</string>
    <string name="setting_addr_push_server_port_lable">推送服务器端口：</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="setting_order_cancle_lable">已取消的订单数：</string>
    <string name="setting_order_used_lable">已通关的订单数：</string>
    <string name="setting_order_unused_lable">未通关的订单数：</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="showexit_text">再按一次退出</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_ok">确定</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_web_search">网页搜索</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_shopper_missing">Google 购物未安装</string>
    <string name="msg_install_google_shopper">Google 购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="preferences_try_bsplus">尝试条码扫描器</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="result_text">找到纯文本</string>

</resources>