<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/wihte">
    
    <com.ejingtong.view.HeadView
        android:id="@+id/setting_head_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout 
		        android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
		        android:orientation="vertical">
        
       			 <TextView android:id="@+id/setting_addr_logic" 
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:gravity="left|center_vertical"
            		android:textColor="@color/gray_888888"
		            android:textSize="20sp"
            		android:paddingBottom="5dip"
            		android:singleLine="true"
            		android:text="@string/setting_addr_logic_lable"
            		/>
        		<EditText android:id="@+id/setting_addr_logic_value"
            		android:layout_width="match_parent"
		            android:layout_height="wrap_content"
        		    android:textColor="@android:color/black"
		            android:textSize="18sp"
        		    android:paddingBottom="5dip"
            	/>
  		  </LinearLayout>

    	  <View android:layout_width="match_parent"
        		android:layout_height="0.5dip"
        		android:background="@color/red_eb1684"/>
  		  <LinearLayout 
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
        		android:orientation="vertical">
        
        		<TextView android:id="@+id/setting_addr_push_back" 
          		  android:layout_width="match_parent"
          		  android:layout_height="wrap_content"
          		  android:gravity="left|center_vertical"
          		  android:textColor="@color/gray_888888"
         		   android:textSize="20sp"
         		   android:paddingBottom="5dip"
         		   android:singleLine="true"
          		  android:text="@string/setting_addr_push_back_lable"
          		  />
        		<EditText android:id="@+id/setting_addr_push_back_value"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:textColor="@android:color/black"
            		android:textSize="18sp"
            		android:paddingBottom="5dip"
            	/>
    		</LinearLayout>
    		<View android:layout_width="match_parent"
        		android:layout_height="0.5dip"
        		android:background="@color/red_eb1684"/>
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dip"
        	android:orientation="vertical">
        
       		 <TextView android:id="@+id/setting_addr_push_server" 
           		 android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="left|center_vertical"
            	android:textColor="@color/gray_888888"
            	android:textSize="20sp"
            	android:paddingBottom="5dip"
            	android:singleLine="true"
            	android:text="@string/setting_addr_push_server_lable"
           	 />
        	<EditText android:id="@+id/setting_addr_push_server_value"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:textColor="@android:color/black"
            	android:textSize="18sp"
            	android:paddingBottom="5dip"
            />
    	</LinearLayout>
    	<View android:layout_width="match_parent"
        	android:layout_height="0.5dip"
        	android:background="@color/red_eb1684"/>
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dip"
        	android:orientation="vertical">
        
        	<TextView android:id="@+id/setting_addr_push_server_port" 
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:gravity="left|center_vertical"
            	android:textColor="@color/gray_888888"
            	android:textSize="20sp"
            	android:paddingBottom="5dip"
            	android:singleLine="true"
            	android:text="@string/setting_addr_push_server_port_lable"
            />
        	<EditText android:id="@+id/setting_addr_push_server_port_value"
           		android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:textColor="@android:color/black"
            	android:textSize="18sp"
            	android:inputType="number"
            	android:paddingBottom="5dip"
            	/>
    	   </LinearLayout>
            <!-- 已通关的订单数 -->
    	    <LinearLayout 
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
        		android:orientation="horizontal">
        
        		<TextView android:id="@+id/setting_order_used_lable" 
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:gravity="left|center_vertical"
            		android:textColor="@color/gray_888888"
            		android:textSize="20sp"
            		android:paddingBottom="5dip"
            		android:singleLine="true"
            		android:text="@string/setting_order_used_lable"
            	/>
        		<TextView android:id="@+id/setting_order_used_value"
           			android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:textColor="@android:color/black"
            		android:textSize="18sp"
            		android:paddingBottom="5dip"
            		/>
    	   </LinearLayout>
    	   <!-- 未通关的订单数 -->
    	    <LinearLayout 
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
        		android:orientation="horizontal">
        
        		<TextView android:id="@+id/setting_order_unused_lable" 
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:gravity="left|center_vertical"
            		android:textColor="@color/gray_888888"
            		android:textSize="20sp"
            		android:paddingBottom="5dip"
            		android:singleLine="true"
            		android:text="@string/setting_order_unused_lable"
            	/>
        		<TextView android:id="@+id/setting_order_unused_value"
           			android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:textColor="@android:color/black"
            		android:textSize="18sp"
            		android:paddingBottom="5dip"
            		/>
    	   </LinearLayout>
    	   <!-- 已取消的订单数 -->
    	    <LinearLayout 
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
        		android:orientation="horizontal">
        
        		<TextView android:id="@+id/setting_order_cancle_lable" 
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:gravity="left|center_vertical"
            		android:textColor="@color/gray_888888"
            		android:textSize="20sp"
            		android:paddingBottom="5dip"
            		android:singleLine="true"
            		android:text="@string/setting_order_cancle_lable"
            	/>
        		<TextView android:id="@+id/setting_order_cancle_value"
           			android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:textColor="@android:color/black"
            		android:textSize="18sp"
            		android:paddingBottom="5dip"
            		/>
        		
    	
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dip"
        		android:orientation="horizontal">
            
            <Button
        android:id="@+id/newDeviceSyncBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="新设备数据同步" />
        		<Button
        android:id="@+id/deviceSyncBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="数据同步" />
    	   </LinearLayout>
        </LinearLayout>
        
    </ScrollView>

    

</LinearLayout>